# ros2-3wheels-omi-robot-

./: .gitignore  CMakeLists.txt  README.md  package.xml
.antigravitycli/: f27bf3c9-26d3-4c94-b736-66ae0e23729f.json
config/: mapper_params_online_async.yaml  omni_wheel_drive_controller.yaml
install/: local_setup.sh  setup.sh
install/diff/lib/diff/: auto.py  converter.py  lidar_veri.py  lidar_veri_anl.py  otonom1.py
install/diff/share/diff/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/diff/share/diff/cmake/: diffConfig-version.cmake  diffConfig.cmake
install/diff/share/diff/config/: omni_wheel_drive_controller.yaml
install/diff/share/diff/environment/: ament_prefix_path.dsv  path.dsv
install/diff/share/diff/launch/: gazebo_sim.launch.py  nav2.launch.py  navigation_gazebo_sim.launch.py  sim.launch.py  slam_gazebo_sim.launch.py
install/diff/share/diff/maps/: map1.pgm  map1.yaml  maze2.pgm  maze2.yaml
install/diff/share/diff/mesh/: base_cift.stl  rim.stl  roller.stl
install/diff/share/diff/rviz/: navigation.rviz  slam.rviz
install/diff/share/diff/urdf/: main.urdf.xacro  (+1 more)
launch/: gazebo_sim.launch.py  nav2.launch.py  navigation_gazebo_sim.launch.py  sim.launch.py  slam_gazebo_sim.launch.py
log/: latest_build
maps/: map1.yaml  maze2.yaml
rviz/: navigation.rviz  slam.rviz
scripts/: auto.py  converter.py  lidar_veri.py  lidar_veri_anl.py  otonom1.py
urdf/: main.urdf.xacro  roller.urdf.xacro
worlds/: map1.sdf  maze2.sdf
(+4 files in other folders)
